--- a/prlgl/server/requirements.txt
+++ b/prlgl/server/requirements.txt
@@ -12,7 +12,7 @@ Django==5.0.4
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
 docx==0.2.4
-faiss-cpu==1.8.0
+faiss-cpu
 filelock==3.13.3
 frozenlist==1.4.1
 fsspec==2024.3.1
